--- a/users/templates/list_users.html
+++ b/users/templates/list_users.html
@@ -63,8 +63,28 @@
                         <p>{% trans 'Contact' %}: {{ acc.phone }}</p>
                         <div align="right">
                             <a href="{% url 'users:update' acc.username %}" class="btn btn-raised btn-success">{% trans 'Edit' %}</a>
-                            <a href="javascript:void(0)" class="btn btn-raised btn-primary">{% trans 'Delete' %}</a>
+                            <a href="javascript:void(0)" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#DeleteModal">{% trans 'Delete' %}</a>
                         </div>
+                    </div>
+                   
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="DeleteModal" tabindex="-1" role="dialog" aria-labelledby="DeleteModalLabel">
+                      <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="DeleteModalLabel">Confirm delete</h4>
+                          </div>
+                          <div class="modal-body">
+                            Are you sure you want to delete?
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-primary">Delete</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                 </div>
             </div>
