ajax call is working and notifications html are coming, I've separated notifications into a template: notifications.html #158 #80

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -64,7 +64,7 @@
 						                     		{% include "notifications.html" %}
 
 						                     		<li>
-						                     		 <a>
+						                     		 <a onclick="getNotifications(5)">
 						                     			<div class="list-group-item">
 								                                  <div class="row-content">
 								                                    <p class="list-group-item-text">See More</p>
