--- a/core/templates/notifications.html
+++ b/core/templates/notifications.html
@@ -1,3 +1,5 @@
+
+<!-- This templates is responsible to display the list of notifications at the top of the page. -->
 {% for notification in notifications  %}
 	{% if notification.actor %} <!-- if the notification has a user-->
 		<li>
