Adding the name of the user in the Remove User Confirmation[Issue:#6]

--- a/users/templates/list_users.html
+++ b/users/templates/list_users.html
@@ -77,7 +77,7 @@
                             <h4 class="modal-title" id="DeleteModalLabel">Confirm delete</h4>
                           </div>
                           <div class="modal-body">
-                            Are you sure you want to delete?                          
+                            Are you sure you want to delete the user <b>{{acc.name}}</b>?                          
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>                         
