add app remeber password #58

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -59,7 +59,7 @@
                       </div>
         						</form>
                     <div class="col-md-10 col-sm-10 col-xs-10 col-lg-10">
-                        <a href="{% url 'core:remember_password' %}">{% trans "Forgot your password?" %}</a>
+                        <a href="{% url 'core:password_reset' %}">{% trans "Forgot your password?" %}</a>
                     </div>
                   {# </div> #}
                   {# <div class="row"> #}
